--- a/src/app/components/add-todo/add-todo.component.html
+++ b/src/app/components/add-todo/add-todo.component.html
@@ -1,1 +1,39 @@
-<p>add-todo works!</p>
+<div class="container">
+  <h1>Add Todo</h1>
+
+  <div style="width: 400px; margin: auto;">
+  <div class="submit-form">
+    <div *ngIf="!submitted">
+      <div class="form-group">
+        <label for="todo">Todo</label>
+        <input
+          type="text"
+          class="form-control"
+          id="todo"
+          required
+          [(ngModel)]="todo.todo"
+          name="todo"
+        />
+      </div>
+
+      <!-- <div class="form-group">
+        <label for="description">Description</label>
+        <input
+          class="form-control"
+          id="description"
+          required
+          [(ngModel)]="todo.description"
+          name="description"
+        />
+      </div> -->
+
+      <button (click)="saveTodo()" class="btn btn-success">Submit</button>
+    </div>
+
+    <div *ngIf="submitted">
+      <h4>You submitted successfully!</h4>
+      <button class="btn btn-success" (click)="newTodo()">Add</button>
+    </div>
+  </div>
+</div>
+</div>
