--- a/src/app/components/todo-detail/todo-detail.component.html
+++ b/src/app/components/todo-detail/todo-detail.component.html
@@ -1,1 +1,74 @@
-<p>todo-detail works!</p>
+<div class="container">
+
+  <div style="width: 400px; margin: auto;">
+    <div *ngIf="currentTodo" class="edit-form">
+      <h4>Todo</h4>
+      <form>
+        <div class="form-group">
+          <label for="todo">Todo</label>
+          <input
+            type="text"
+            class="form-control"
+            id="todo"
+            [(ngModel)]="currentTodo.todo"
+            name="todo"
+          />
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox"
+            [(ngModel)]="currentTodo.completed" name="completed"
+            value="" id="completed">
+          <label class="form-check-label" for="completed">
+            Completed
+          </label>
+        </div>
+
+      </form>
+
+      <button class="btn btn-danger mr-2" (click)="deleteTodo()">
+        Delete
+      </button>
+
+      <button
+        type="submit"
+        class="btn btn-success"
+        (click)="updateTodo()"
+      >
+        Update
+      </button>
+      <p>{{ message }}</p>
+    </div>
+
+    <div *ngIf="!currentTodo">
+      <br />
+      <p>Cannot access this Todo...</p>
+    </div>
+  </div>
+
+</div>
+
+<!-- <button
+class="badge badge-primary mr-2"
+*ngIf="currentTodo.published"
+(click)="updatePublished(false)"
+>
+UnPublish
+</button>
+<button
+*ngIf="!currentTodo.published"
+class="badge badge-primary mr-2"
+(click)="updatePublished(true)"
+>
+Publish
+</button> -->
+
+<!-- <div class="form-group">
+  <label for="completed">Completed</label>
+  <input
+    type="text"
+    class="form-control"
+    id="description"
+    [(ngModel)]="currentTodo.description"
+    name="description"
+  />
+</div> -->
